bug- and style-fixing

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,7 +34,7 @@
                         <twig:nav :menu="sidebar_menu|default('main')" class="nav-github" :routeParameters="sidebar_route_parameters|default([])"/>
                     {% endblock %}
                 </div>
-                <div class="col">
+                <div class="col-9">
                     {% block content %}{% endblock %}
                 </div>
             </div>
