--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -10,12 +10,8 @@ h1 {
     margin-bottom: 2rem;
 }
 
-h2 {
-    margin: 1rem 0 2rem;
-}
-
-h3, h4, h5 {
-    margin: 1rem 0;
+h2, h3, h4, h5 {
+    margin: 2rem 0 1rem;
 }
 
 header {
