rename ambiguous "infrastructure" to "planetary infrastructure"

--- a/templates/planet/details.html.twig
+++ b/templates/planet/details.html.twig
@@ -184,11 +184,11 @@
     </ul>
 
     <div class="h4 mt-5 mb-4 px-3">
-        Infrastructure
+        Planetary Infrastructure
     </div>
 
     <ul class="list-group my-3">
-        {% for item in planet.infrastructure %}
+        {% for item in planet.planetaryInfrastructure %}
             {% set icon = constant('App\\PrUn::INFRASTRUCTURE')[item]['icon'] %}
             <li class="list-group-item">
                 <div class="d-inline-block p-2 me-3 border rounded" style="line-height: 1;">
