template - restructure report navigation, add buttons to navigate to the next/previous months report

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -20,6 +20,16 @@ header {
     background-color: var(--bs-primary);
 }
 
+.link {
+    color: inherit;
+    text-decoration: dotted;
+
+    &:hover {
+        color: var(--bs-link-color);
+        text-decoration: underline;
+    }
+}
+
 #nav-breadcrumbs {
     padding: 1rem 0;
     margin-bottom: 1rem;
