--- a/templates/report/template.html.twig
+++ b/templates/report/template.html.twig
@@ -6,6 +6,7 @@
 
 
 {% block sidebar %}
+    {% set sidebar_menu = 'report' %}
     {% set sidebar_route_parameters = {
         'region': region,
         'year': year,
