--- a/templates/components/chart/planets.html.twig
+++ b/templates/components/chart/planets.html.twig
@@ -6,7 +6,7 @@
         }) }}
     </div>
 
-    <div class="d-flex justify-content-between mt-5">
+    <div class="d-flex justify-content-between align-items-center mt-5">
         {% set buttons = [
             { label: 'Surface', icon: 'fa6-solid:earth-europe' },
             { label: 'Temperature', icon: 'fa6-solid:temperature-half' },
