add margin-bottom to h2 elements in the dashboard template for consistent spacing

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,7 +4,7 @@
 {% block content %}
     <h1 class="font-serif">Dashboard</h1>
 
-    <h2>Latest Economic Reports</h2>
+    <h2 class="mb-4">Latest Economic Reports</h2>
 
     {% set items = [
         'Antares',
@@ -29,7 +29,7 @@
     </div>
 
 
-    <h2>Database</h2>
+    <h2 class="mb-4">Database</h2>
 
     <div class="row row-cols-2 g-3">
         <div class="col">
