--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,18 +14,12 @@
 </head>
 <body>
 {% block body %}
-    <header></header>
-    <nav id="nav-breadcrumbs">
+    <header>
         <div class="container">
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    {% block breadcrumbs %}
-                        <li class="breadcrumb-item" aria-current="page">Home</li>
-                    {% endblock %}
-                </ol>
-            </nav>
+            <span class="logo">PrUnER</span>
+            <span class="d-inline-block text-white ms-2">Prosperous Universe Economic Report</span>
         </div>
-    </nav>
+    </header>
     <main>
         <div class="container pb-5">
             <div class="row g-5">
